--- a/iOS/iOS/Base.lproj/Main.storyboard
+++ b/iOS/iOS/Base.lproj/Main.storyboard
@@ -24,7 +24,10 @@
                                         <rect key="frame" x="0.0" y="0.0" width="428" height="1206"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MBD-hn-Wtf">
-                                                <rect key="frame" x="42.666666666666657" y="10.000000000000004" width="342.66666666666674" height="60.333333333333343"/>
+                                                <rect key="frame" x="42.666666666666657" y="10" width="342.66666666666674" height="45"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="45" id="nYd-WT-0QK"/>
+                                                </constraints>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Login Screen">
                                                     <backgroundConfiguration key="background">
@@ -36,7 +39,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G70-L3-BEE">
-                                                <rect key="frame" x="42.666666666666657" y="90.333333333333343" width="342.66666666666674" height="60.333333333333343"/>
+                                                <rect key="frame" x="42.666666666666657" y="75" width="342.66666666666674" height="45"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Size Class">
                                                     <backgroundConfiguration key="background">
@@ -48,7 +51,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gK0-aq-ZEn">
-                                                <rect key="frame" x="42.666666666666657" y="170.66666666666669" width="342.66666666666674" height="60.333333333333343"/>
+                                                <rect key="frame" x="42.666666666666657" y="140" width="342.66666666666674" height="45"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Content Hugging &amp; Compression Resistance">
                                                     <backgroundConfiguration key="background">
@@ -60,9 +63,9 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jJf-XG-Ova">
-                                                <rect key="frame" x="42.666666666666657" y="251.00000000000003" width="342.66666666666674" height="60.333333333333343"/>
+                                                <rect key="frame" x="42.666666666666657" y="205" width="342.66666666666674" height="45"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="UI Widgets">
+                                                <buttonConfiguration key="configuration" style="plain" title="UI Components">
                                                     <backgroundConfiguration key="background">
                                                         <color key="strokeColor" name="AccentColor"/>
                                                     </backgroundConfiguration>
@@ -79,7 +82,6 @@
                                             <constraint firstItem="G70-L3-BEE" firstAttribute="trailing" secondItem="MBD-hn-Wtf" secondAttribute="trailing" id="4sa-Kp-N3z"/>
                                             <constraint firstItem="G70-L3-BEE" firstAttribute="top" secondItem="MBD-hn-Wtf" secondAttribute="bottom" constant="20" id="9UX-xy-8aJ"/>
                                             <constraint firstItem="jJf-XG-Ova" firstAttribute="leading" secondItem="gK0-aq-ZEn" secondAttribute="leading" id="Cg2-w1-Arn"/>
-                                            <constraint firstItem="MBD-hn-Wtf" firstAttribute="height" secondItem="bHk-vR-Tk0" secondAttribute="height" multiplier="0.05" id="MO7-99-xzR"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="centerX" secondItem="G70-L3-BEE" secondAttribute="centerX" id="SQv-Hx-q4S"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="top" secondItem="G70-L3-BEE" secondAttribute="bottom" constant="20" id="T9c-AH-wm2"/>
                                             <constraint firstItem="MBD-hn-Wtf" firstAttribute="top" secondItem="bHk-vR-Tk0" secondAttribute="top" constant="10" id="XS5-bl-Ozc"/>
@@ -558,10 +560,10 @@
             </objects>
             <point key="canvasLocation" x="1854.6728971962616" y="397.84017278617711"/>
         </scene>
-        <!--UIWidgets-->
+        <!--UIComponents-->
         <scene sceneID="nKg-ZC-Raj">
             <objects>
-                <viewControllerPlaceholder storyboardName="UIWidgets" id="uPN-GO-pz5" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="UIComponents" id="uPN-GO-pz5" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="shg-9J-twR"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uZS-8S-yCK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
