--- a/iOS/iOS/Autolayout/Base.lproj/Main.storyboard
+++ b/iOS/iOS/Autolayout/Base.lproj/Main.storyboard
@@ -86,18 +86,33 @@
                                                     <action selector="onNavigationButtonClicked:" destination="r70-eW-0F3" eventType="touchUpInside" id="2s9-fS-0zT"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RGb-Jo-PwY">
+                                                <rect key="frame" x="42.666666666666657" y="335" width="342.66666666666674" height="45"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Web Services">
+                                                    <backgroundConfiguration key="background">
+                                                        <color key="strokeColor" name="AccentColor"/>
+                                                    </backgroundConfiguration>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="onWebServicesClicked:" destination="r70-eW-0F3" eventType="touchUpInside" id="vlp-Jg-Gqm"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="trailing" secondItem="G70-L3-BEE" secondAttribute="trailing" id="3OL-tY-y6I"/>
                                             <constraint firstItem="jJf-XG-Ova" firstAttribute="height" secondItem="gK0-aq-ZEn" secondAttribute="height" id="41v-qP-nh4"/>
+                                            <constraint firstItem="RGb-Jo-PwY" firstAttribute="height" secondItem="mJD-5Y-XiC" secondAttribute="height" id="4nj-nx-GeX"/>
                                             <constraint firstItem="G70-L3-BEE" firstAttribute="trailing" secondItem="MBD-hn-Wtf" secondAttribute="trailing" id="4sa-Kp-N3z"/>
+                                            <constraint firstItem="RGb-Jo-PwY" firstAttribute="leading" secondItem="mJD-5Y-XiC" secondAttribute="leading" id="6x0-Ih-RXx"/>
                                             <constraint firstItem="G70-L3-BEE" firstAttribute="top" secondItem="MBD-hn-Wtf" secondAttribute="bottom" constant="20" id="9UX-xy-8aJ"/>
                                             <constraint firstItem="jJf-XG-Ova" firstAttribute="leading" secondItem="gK0-aq-ZEn" secondAttribute="leading" id="Cg2-w1-Arn"/>
                                             <constraint firstItem="mJD-5Y-XiC" firstAttribute="trailing" secondItem="jJf-XG-Ova" secondAttribute="trailing" id="Hna-D9-cx2"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="centerX" secondItem="G70-L3-BEE" secondAttribute="centerX" id="SQv-Hx-q4S"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="top" secondItem="G70-L3-BEE" secondAttribute="bottom" constant="20" id="T9c-AH-wm2"/>
                                             <constraint firstItem="MBD-hn-Wtf" firstAttribute="top" secondItem="bHk-vR-Tk0" secondAttribute="top" constant="10" id="XS5-bl-Ozc"/>
+                                            <constraint firstItem="RGb-Jo-PwY" firstAttribute="trailing" secondItem="mJD-5Y-XiC" secondAttribute="trailing" id="YRu-fR-qip"/>
                                             <constraint firstItem="mJD-5Y-XiC" firstAttribute="leading" secondItem="jJf-XG-Ova" secondAttribute="leading" id="YfH-4W-vMz"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="height" secondItem="G70-L3-BEE" secondAttribute="height" id="aPB-tU-5VV"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="centerX" secondItem="G70-L3-BEE" secondAttribute="centerX" id="g3A-Wc-BWT"/>
@@ -106,6 +121,7 @@
                                             <constraint firstItem="G70-L3-BEE" firstAttribute="height" secondItem="MBD-hn-Wtf" secondAttribute="height" id="jlK-Xt-YnM"/>
                                             <constraint firstItem="G70-L3-BEE" firstAttribute="leading" secondItem="MBD-hn-Wtf" secondAttribute="leading" id="lEy-3t-l2N"/>
                                             <constraint firstItem="mJD-5Y-XiC" firstAttribute="top" secondItem="jJf-XG-Ova" secondAttribute="bottom" constant="20" id="omg-up-1wB"/>
+                                            <constraint firstItem="RGb-Jo-PwY" firstAttribute="top" secondItem="mJD-5Y-XiC" secondAttribute="bottom" constant="20" id="puI-8V-bou"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="leading" secondItem="G70-L3-BEE" secondAttribute="leading" id="u5s-Pc-qEt"/>
                                             <constraint firstItem="jJf-XG-Ova" firstAttribute="top" secondItem="gK0-aq-ZEn" secondAttribute="bottom" constant="20" id="ucA-g6-Cho"/>
                                             <constraint firstItem="MBD-hn-Wtf" firstAttribute="centerX" secondItem="bHk-vR-Tk0" secondAttribute="centerX" id="zkW-eG-kv0"/>
@@ -579,10 +595,10 @@
         <!--UIComponents-->
         <scene sceneID="nKg-ZC-Raj">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uZS-8S-yCK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewControllerPlaceholder storyboardName="UIComponents" id="uPN-GO-pz5" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="shg-9J-twR"/>
                 </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uZS-8S-yCK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="170" y="516"/>
         </scene>
