--- a/iOS/iOS/Autolayout/Base.lproj/Main.storyboard
+++ b/iOS/iOS/Autolayout/Base.lproj/Main.storyboard
@@ -98,9 +98,22 @@
                                                     <action selector="onWebServicesClicked:" destination="r70-eW-0F3" eventType="touchUpInside" id="vlp-Jg-Gqm"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SKu-43-e8Z">
+                                                <rect key="frame" x="42.666666666666657" y="400" width="342.66666666666674" height="45"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Architecture">
+                                                    <backgroundConfiguration key="background">
+                                                        <color key="strokeColor" name="AccentColor"/>
+                                                    </backgroundConfiguration>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="onArchitectureClicked:" destination="r70-eW-0F3" eventType="touchUpInside" id="6D4-ji-DPj"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="SKu-43-e8Z" firstAttribute="trailing" secondItem="RGb-Jo-PwY" secondAttribute="trailing" id="0Fv-LD-Hox"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="trailing" secondItem="G70-L3-BEE" secondAttribute="trailing" id="3OL-tY-y6I"/>
                                             <constraint firstItem="jJf-XG-Ova" firstAttribute="height" secondItem="gK0-aq-ZEn" secondAttribute="height" id="41v-qP-nh4"/>
                                             <constraint firstItem="RGb-Jo-PwY" firstAttribute="height" secondItem="mJD-5Y-XiC" secondAttribute="height" id="4nj-nx-GeX"/>
@@ -109,12 +122,15 @@
                                             <constraint firstItem="G70-L3-BEE" firstAttribute="top" secondItem="MBD-hn-Wtf" secondAttribute="bottom" constant="20" id="9UX-xy-8aJ"/>
                                             <constraint firstItem="jJf-XG-Ova" firstAttribute="leading" secondItem="gK0-aq-ZEn" secondAttribute="leading" id="Cg2-w1-Arn"/>
                                             <constraint firstItem="mJD-5Y-XiC" firstAttribute="trailing" secondItem="jJf-XG-Ova" secondAttribute="trailing" id="Hna-D9-cx2"/>
+                                            <constraint firstItem="SKu-43-e8Z" firstAttribute="leading" secondItem="RGb-Jo-PwY" secondAttribute="leading" id="PPG-rF-wJQ"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="centerX" secondItem="G70-L3-BEE" secondAttribute="centerX" id="SQv-Hx-q4S"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="top" secondItem="G70-L3-BEE" secondAttribute="bottom" constant="20" id="T9c-AH-wm2"/>
                                             <constraint firstItem="MBD-hn-Wtf" firstAttribute="top" secondItem="bHk-vR-Tk0" secondAttribute="top" constant="10" id="XS5-bl-Ozc"/>
+                                            <constraint firstItem="SKu-43-e8Z" firstAttribute="height" secondItem="RGb-Jo-PwY" secondAttribute="height" id="YI3-YK-dCV"/>
                                             <constraint firstItem="RGb-Jo-PwY" firstAttribute="trailing" secondItem="mJD-5Y-XiC" secondAttribute="trailing" id="YRu-fR-qip"/>
                                             <constraint firstItem="mJD-5Y-XiC" firstAttribute="leading" secondItem="jJf-XG-Ova" secondAttribute="leading" id="YfH-4W-vMz"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="height" secondItem="G70-L3-BEE" secondAttribute="height" id="aPB-tU-5VV"/>
+                                            <constraint firstItem="SKu-43-e8Z" firstAttribute="top" secondItem="RGb-Jo-PwY" secondAttribute="bottom" constant="20" id="c9i-Vi-Fxv"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="centerX" secondItem="G70-L3-BEE" secondAttribute="centerX" id="g3A-Wc-BWT"/>
                                             <constraint firstItem="MBD-hn-Wtf" firstAttribute="width" secondItem="bHk-vR-Tk0" secondAttribute="width" multiplier="0.8" id="hxa-uN-IZN"/>
                                             <constraint firstItem="jJf-XG-Ova" firstAttribute="trailing" secondItem="gK0-aq-ZEn" secondAttribute="trailing" id="i2L-e8-7Nx"/>
