--- a/iOS/iOS/Autolayout/Base.lproj/Main.storyboard
+++ b/iOS/iOS/Autolayout/Base.lproj/Main.storyboard
@@ -131,6 +131,7 @@
                                             <constraint firstItem="RGb-Jo-PwY" firstAttribute="trailing" secondItem="mJD-5Y-XiC" secondAttribute="trailing" id="YRu-fR-qip"/>
                                             <constraint firstItem="mJD-5Y-XiC" firstAttribute="leading" secondItem="jJf-XG-Ova" secondAttribute="leading" id="YfH-4W-vMz"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="height" secondItem="G70-L3-BEE" secondAttribute="height" id="aPB-tU-5VV"/>
+                                            <constraint firstAttribute="bottom" secondItem="SKu-43-e8Z" secondAttribute="bottom" constant="20" id="ae4-Kg-p9a"/>
                                             <constraint firstItem="SKu-43-e8Z" firstAttribute="top" secondItem="RGb-Jo-PwY" secondAttribute="bottom" constant="20" id="c9i-Vi-Fxv"/>
                                             <constraint firstItem="gK0-aq-ZEn" firstAttribute="centerX" secondItem="G70-L3-BEE" secondAttribute="centerX" id="g3A-Wc-BWT"/>
                                             <constraint firstItem="MBD-hn-Wtf" firstAttribute="width" secondItem="bHk-vR-Tk0" secondAttribute="width" multiplier="0.8" id="hxa-uN-IZN"/>
